--- a/Squadfree/Squadfree/assets/css/main.css
+++ b/Squadfree/Squadfree/assets/css/main.css
@@ -19,22 +19,22 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #444444; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #2f4d5a; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #67b0d1; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --background-color: #EEEEEE; /* Background color for the entire website, including individual sections */
+  --default-color: #8E1616; /* Default color used for the majority of the text content across the entire website */
+  --heading-color: #09122C; /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #D84040; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #ffffff;  /* The default color of the main navmenu links */
-  --nav-hover-color: #67b0d1; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #67b0d1; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-color: #EEEEEE;  /* The default color of the main navmenu links */
+  --nav-hover-color: #D84040; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-mobile-background-color: #EEEEEE; /* Used as the background color for mobile navigation menu */
+  --nav-dropdown-background-color: #EEEEEE; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
+  --nav-dropdown-color: #000000; /* Used for navigation links of the dropdown items in the navigation menu. */
+  --nav-dropdown-hover-color: #8E1616; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -45,18 +45,18 @@
 }
 
 .dark-background {
-  --background-color: #273f49;
+  --background-color: #000000;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #395c6a;
+  --surface-color: #ae5e5e4a;
   --contrast-color: #ffffff;
 }
 
 .accent-background {
-  --background-color: #67b0d1;
-  --default-color: #ffffff;
-  --heading-color: #ffffff;
-  --surface-color: #8ec4dd;
+  --background-color: #1D1616;
+  --default-color: #EEEEEE;
+  --heading-color: #EEEEEE;
+  --surface-color: #8ec4dd00;
 }
 
 /* Smooth scroll */
@@ -184,7 +184,7 @@ h6 {
 /* Global Header on Scroll
 ------------------------------*/
 .scrolled .header {
-  --background-color: #4b99bb;
+  --background-color: #000000;
 }
 
 /*--------------------------------------------------------------
@@ -202,10 +202,15 @@ h6 {
     display: flex;
     list-style: none;
     align-items: center;
+    
+   
   }
 
   .navmenu li {
     position: relative;
+  
+    
+
   }
 
   .navmenu a,
@@ -229,6 +234,7 @@ h6 {
     line-height: 0;
     margin-left: 5px;
     transition: 0.3s;
+ 
   }
 
   .navmenu li:hover>a,
@@ -431,6 +437,7 @@ h6 {
   background-color: var(--background-color);
   font-size: 14px;
   position: relative;
+  
 }
 
 .footer .footer-top {
